# ghostpost_machine

./: db.sqlite3  manage.py  pyproject.toml
api_app/: admin.py  models.py  serializers.py  views.py
api_app/migrations/: 0001_initial.py
ghostpost_machine/: asgi.py  settings.py  urls.py  wsgi.py
